[tool.poetry]
name = "ezshare-cpap"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ezshare_cpap"}]

[tool.poetry.dependencies]
python = "^3.11"
ezshare = "^0.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
